# SpMV-Research

./: .gitattributes  .gitignore  .gitmodules  README.md  Run_dataset.sh  Run_examples.sh  Run_friendship_validation.sh  dataset_friends_run_order.in  dataset_sorted_run_order.in  dataset_sorted_run_order_continue.in
CSR5_cuda/PETROS_wrap/: CMakeLists.txt
CSR5_cuda/PETROS_wrap/tests/: testCudaCSR5.cu
CSR5_cuda/PETROS_wrap_operator/: CMakeLists.txt
CSR5_cuda/PETROS_wrap_operator/inc/: spmv_operator.hpp  spmv_utils.hpp
CSR5_cuda/PETROS_wrap_operator/src/: input_dev.cu  input_host.cpp  spmv_operator.cu  spmv_utils.cpp
CSR5_cuda/PETROS_wrap_operator/tests/: testCudaCSR5_generate.cu  testCudaCSR5_mtx.cu
benchmark_code/CPU/AMD/spmv_code_bench/LCM-partially-strided-codelet/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  run.sh  slurm.sh
benchmark_code/CPU/AMD/spmv_code_bench/LCM-partially-strided-codelet/cmake/: FindPAPI.cmake  Findortools.cmake
benchmark_code/CPU/AMD/spmv_code_bench/LCM-partially-strided-codelet/codelet_demo/: CMakeLists.txt  GenericKernels.h  RunTests.cpp  RunTests.h  TestFSC.cpp  TestFSC.h  TestFSCPSC.cpp  TestFSCPSC.h  TestPSC.cpp  TestPSC.h
benchmark_code/CPU/AMD/spmv_code_bench/LCM-partially-strided-codelet/demo/: BLAS.cpp  BLAS.h  CMakeLists.txt  FastHash.h  FusionDemo.cpp  FusionDemo.h  GEMM_demo.cpp  PAPIWrapper.h  Profiler.h  SPMM_demo.cpp  SPMM_demo_utils.h  SPMM_dl_demo.cpp  SPMM_dl_demo_utils.h  SPMV_CVR.cpp  SPMV_CVR.h  SPMV_demo.cpp  SPMV_demo_0_original.cpp  SPMV_demo_utils.h  SPSPMM_demo.cpp  SPSPMM_demo_utils.h  SPTRSV_demo.cpp  SPTRSV_demo_utils.h  SPTRSV_supernodal_sympiler.h  SerialSpMVExecutor.cpp  SerialSpMVExecutor.h  SpSpCSR.h  SuperNodalTools.cpp  SuperNodalTools.h  running_example.cpp
benchmark_code/CPU/AMD/spmv_code_bench/LCM-partially-strided-codelet/include/: Analyzer.h  DDT.h  DDTCodelets.h  DDTDef.h  DDTUtils.h  Executor.h  GenerateCppSource.h  GenericCodelets.h  GenericCodeletsSpTRSV.h  Input.h  Inspector.h  MatrixUtils.h  ParseMatrixMarket.h  ParseSMTX.h  PatternMatching.h  SpMMGenericCode.h  SpMVGenericCode.h  SparseMatrixIO.h
benchmark_code/CPU/AMD/spmv_code_bench/acc/: CMakeLists.txt  strategy_picker.cpp
benchmark_code/CPU/AMD/spmv_code_bench/acc/api/: spmv.h  spmv_imp.cpp  types.h
benchmark_code/CPU/ARM/spmv_code_bench/sell-C-s/: CMakeLists.txt  build.make  link.txt  link_rapl_arm.txt
benchmark_code/GPU/NVIDIA-CUDA/nvidia-energy-measure/: .gitignore  CMakeLists.txt  example_main.cu
benchmark_code/GPU/NVIDIA-CUDA/nvidia-energy-measure/include/: nvem_helpers.hpp
benchmark_code/GPU/NVIDIA-CUDA/nvidia-energy-measure/src/: helpers.cpp
benchmark_code/GPU/NVIDIA-CUDA/spmv_code_csr5_cuda_11.x_exp/integrated_csr5_wrap_operator/: CMakeLists.txt
hybrid-spmv-lib/: CMakeLists.txt  README.md  Run_examples.sh  code_format.py  test_matrices_full.txt  test_matrices_new.txt
hybrid-spmv-lib/.ipynb_checkpoints/: clear_results-checkpoint.ipynb
hybrid-spmv-lib/Power_measure/: double_imp-CSR5_rep-1_file-100K.mtx  double_imp-CSR5_rep-1_file-600K.mtx  double_imp-CSR5_rep-1_file-ASIC_680k.mtx  double_imp-CSR5_rep-1_file-Si41Ge41H72.mtx  double_imp-CSR5_rep-1_file-circuit5M.mtx  double_imp-CSR5_rep-1_file-circuit5M_sorted_1.mtx  double_imp-CSR5_rep-1_file-circuit5M_sorted_2.mtx  double_imp-CSR5_rep-1_file-circuit5M_sorted_3.mtx  double_imp-CSR5_rep-1_file-circuit5M_sorted_4.mtx  double_imp-CSR5_rep-1_file-dense_4096.mtx  double_imp-CSR5_rep-1_file-dielFilterV3real.mtx  double_imp-CSR5_rep-1_file-dielFilterV3real_sorted_1.mtx  double_imp-CSR5_rep-1_file-dielFilterV3real_sorted_2.mtx  double_imp-CSR5_rep-1_file-dielFilterV3real_sorted_3.mtx  double_imp-CSR5_rep-1_file-dielFilterV3real_sorted_4.mtx  double_imp-CSR5_rep-1_file-in-2004.mtx  double_imp-CSR5_rep-1_file-soc-LiveJournal1.mtx  double_imp-CSR5_rep-1_file-soc-LiveJournal1_sorted_1.mtx  double_imp-CSR5_rep-1_file-soc-LiveJournal1_sorted_2.mtx  double_imp-CSR5_rep-1_file-soc-LiveJournal1_sorted_3.mtx  double_imp-CSR5_rep-1_file-soc-LiveJournal1_sorted_4.mtx  double_imp-CSR5_rep-1_file-sparse_2097152_block_diagonal_16.mtx  double_imp-CSR5_rep-1_file-sparse_2097152_block_diagonal_4.mtx  double_imp-CSR5_rep-1_file-sparse_2097152_block_diagonal_64.mtx  double_imp-CSR5_rep-1_file-sparse_524288_banded_1.mtx  double_imp-CSR5_rep-1_file-sparse_524288_banded_2.mtx  double_imp-CSR5_rep-1_file-sparse_524288_banded_3.mtx  double_imp-CSR5_rep-1_file-sparse_65536_block_diagonal_16.mtx  double_imp-CSR5_rep-1_file-sparse_65536_block_diagonal_4.mtx  double_imp-CSR5_rep-1_file-sparse_65536_block_diagonal_64.mtx  double_imp-CSR5_rep-1_file-sparse_8388608_banded_1.mtx  double_imp-CSR5_rep-1_file-sparse_8388608_banded_2.mtx  double_imp-CSR5_rep-1_file-sparse_8388608_banded_3.mtx  double_imp-CSR5_rep-1_file-thermomech_dK.mtx  double_imp-CSR5_rep-1_file-wikipedia-20051105.mtx  double_imp-CSR5_rep-1_file-wikipedia-20051105_sorted_1.mtx  double_imp-CSR5_rep-1_file-wikipedia-20051105_sorted_2.mtx  double_imp-CSR5_rep-1_file-wikipedia-20051105_sorted_3.mtx  double_imp-CSR5_rep-1_file-wikipedia-20051105_sorted_4.mtx  double_imp-CSR5_rep-1_file-xenon2.mtx  (+2212 more)
hybrid-spmv-lib/Results/: .~lock.sorted_silver1-TeslaV100_double_run_test_matrices.csv#  .~lock.sorted_silver1-TeslaV100_float_run_test_matrices.csv#  sorted_cleaned_silver1-TeslaV100_double_run_test_matrices.csv  sorted_cleaned_silver1-TeslaV100_float_run_test_matrices.csv  sorted_silver1-TeslaV100_double_run_test_matrices.csv  sorted_silver1-TeslaV100_float_run_test_matrices.csv
hybrid-spmv-lib/inc/: avx512CSR5.hpp  spmv_operator.hpp  spmv_utils.hpp
hybrid-spmv-lib/src/: input_dev.cu  input_host.cpp  spmv_operator.cu  spmv_utils.cpp
hybrid-spmv-lib/tests/: MakeSpMVGenerateAgain.cu  MakeSpMVGreatAgain.cu  cuSPARSEbsrmv_9-2_generate.cu  cuSPARSEbsrmv_9-2_mtx.cu  cuSPARSEcsrmv_9-2_generate.cu  cuSPARSEcsrmv_9-2_mtx.cu  cuSPARSEhybmv_9-2_generate.cu  cuSPARSEhybmv_9-2_mtx.cu  cuSPARSEhybmv_ELL_9-2_generate.cu  cuSPARSEhybmv_ELL_9-2_mtx.cu
hybrid-spmv-lib/tests/backup/: MakeSpMVDoubleAgain.cu  MakeSpMVFloatAgain.cu
(+3019 files in other folders)
